--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -192,7 +192,7 @@ img {
   font-size: var(--normal-font-size);
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: var(--text-color-light);
+  color: var(--main1-color);
 }
 
 .nav__link {
@@ -622,15 +622,6 @@ th, td {
                                 <span class="nav__name">View Schedule</span>
                             </a>
 
-                            <a href="#feed" class="nav__link">
-                                <i class='bx bx-label nav__icon' ></i>
-                                <span class="nav__name">Feedback</span>
-                            </a>
-
-                            <a href="#prof" class="nav__link">
-                                <i class='bx bx-user nav__icon' ></i>
-                                <span class="nav__name">Profile</span>
-                            </a>
                             
                         </div>
     
