--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -218,7 +218,7 @@ img {
   font-size: var(--normal-font-size);
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: var(--text-color-light);
+  color: var(--main1-color);
 }
 
 .nav__link {
