--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -6,166 +6,234 @@ Referred Students
 
 {% block content %} 
 <style>
-       .card{
-      display: flex;
-      padding: 20px;
-      max-width: 408px;
-   padding-left: 5px;
-      height: 210px;
-      margin: 20px;
-      border-radius: 10px;
-      background-color: #98adb4;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-      overflow-y: scroll;
-      float: left;
-      flex-wrap: row;
-      margin-left: 140px;
-      align-items: stretch;
-     
-      
-      
-      
-    }
-.txtFont{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; margin-right: 30px; 
-  display: flex;
-  font-size: 17px;
-  text-overflow: ellipsis;
-  align-items: start;
+   
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .txtFont{
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    text-align:left; margin-right: 100px; font-size: 20px;
+  }
+  .txtFonty{
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    text-align:left; margin-right: 100px; font-size: 17px;
+  }
+  .last{
+     font-size: 25px;
+  }
+
+
+
+.card-text{
+display: inline;
+flex-direction: row;
+justify-content: start;
+width: 600px;
+/* margin-right: 600px; */
+
 }
-.txtFonty{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; 
-  display: flex;
-  font-size: 17px; margin-left: 10px;
-  text-overflow: ellipsis;
-  margin-top: 8px;
-  align-items: center;
-  /* justify-content: center; */
+
+
+.card-img{
+width: 160px;
+height: 160px;
+border-radius: 50%;
+float: left;
+margin-left: 80px;
+margin-top: 20px;
+
+}
+
+
+.card-description{
+margin: 10px 0;
+}
+
+
+.card-link{
+margin-top: 20px;
+}
+.card-img{
+background-color: transparent;
+
+float: left;
+}
+
+.card-title{
+font-size: 20px;
+color: #334155;
+margin-right: 800px;
+margin-left: 160px;
+margin-bottom: 40px;
+padding: auto;
+}
+.card-stud{
+font-size: 23px;
+color: #334155;
+margin-right: 90px; line-height: 5%;
+font-weight: 600;
+} 
+.card-description{
+font-size: 12px;
+color: #64748B;
+}
+
+.card-link{
+font-size: 12px;
+color: #4F46E5;
 }
 /* === TABLE ==== */
 .table-box
 {
-    margin: 50px auto;
+
+margin-bottom: 40px;
+margin-left: 150px;
+vertical-align:top;
 }
 
-.table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-    
-}
+/* .table-row{
+display: table;
+width: 40%;
+margin: 10px auto;
+font-family: sans-serif;
+background: transparent;
+padding: 4px 0;
+color: #555;
+font-size: 13px;
+box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+height: 0.1%;
+border-radius: 20px;
+margin-top: 50px;
+
+} */
 .table-head{
-  
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    height: 20px;
-    line-height: 5px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
- 
+
+background: #E5E4E2;
+box-shadow: none;
+color: #fff;
+font-weight: 600;
+line-height: 5px;
+box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+width: 500px;
+margin-left: 355px;
+border-radius: 20px;
 }
 .table-head .table-cell{
-    border-right: none;
+border-right: none;
 }
 .table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #d8c090;
-    vertical-align: middle;
-    
+display: table-cell;
+width: 20%;
+text-align: center;
+padding: 4px 0;
+border-right: 1px solid #838996;
+vertical-align: middle;
 }
 .first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 10%;
+text-align: left;
+padding-left: 10px;
+width: 8%;
 }
-
 .last-cell{
-    border-right: none;
-    width: 10%;
+border-right: none;
+width: 15px;
 }
 /* a{
-    text-decoration: none;
-    color: #555;
+textdecoration: none;
+color: #555;
 } */
 p{
-  font-size: 17px;
-  color: black;
+font-size: 17px;
+color: black;
 }
 .listTitle{
-  font-size: 20px;
-  text-align: center;
+font-size: 20px;
+text-align: center;
 }
 @media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
-  }
+.table-row {
+font-size: 11px;
+}
 }
 .trow-list{
-      display: table;
-    width: 85%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: #E3E4FA;
-    padding: 4px 0;
-    color: #d8c090;
-    font-size: 15px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    line-height: 5px;
-    
+display:inline-block;
+width: 85%;
+
+font-family: sans-serif;
+background: transparent;
+padding: 4px 0;
+color: #555;
+font-size: 13px;
+
+height: 15px;
+
+
+vertical-align:top;
+margin-bottom: 100px;
+
 }
+.modal{
+font-size: 19px;
+}
+.container{
+border-radius: 10px;
+background-color: #B4CFEC;
+box-shadow:
+0 9px 33px rgba(0, 0, 0, 0.07);
+width: 1200px;
+height: 400px;
+float: center;
+margin-left: 15px;
+}
+
 </style>
 
 
-
-                            <div class="table-row table-head">
-            <div class="table-cell first-cell">
-                <p class="listTitle">List of Pending Referred Students</p>
-            </div>
-        </div>
-        <br>
+<div class="table-cont">
+  <div class="table-row table-head">
+<div class="table-cell first-cell">
+<p class="listTitle">List of Pending Referred Students</p>
+</div>
+</div>  
 {% if not objects %}
-            No Referrals Yet!
-        {% endif %}
-                    <div class="table-box">
-                            {% for object in objects %}
-        <div class="trow-list">
-            <div class="table-cell first-cell">
-                <p style="text-align: center;"><b>{{object.studnumber}}</b></p>
-            </div>
-            <div class="table-cell" >
-                <p style="text-align: left;"> &nbsp; &nbsp; {{object.lastname}}, &nbsp; {{object.firstname}}</p>
-            </div> 
-            <div class="table-cell" >
-                <p style="text-align: left;"> &nbsp; &nbsp; {{object.status|title}}</p>
-            </div> 
-                <div class="table-cell last-cell">
-                <a style="color: black;"href="{% url 'counselor_view_detail_referred_students' object.id %}"><b>View More Information</b></a>
-            </div>    
-        </div>
-            
+  No Referrals Yet!
+{% endif %}
+<br>
+<table class="table">
+<thead>
+<tr>
+<th>ID Number</th>
+<th>Students Name</th>
+<th>Date</th>
+<th>Status</th>
+<th>Information</th>
 
-                {% endfor %} 
-         </div>
 
+
+</tr>
+</thead>
+<br>
+
+{% for object in objects %}
+
+<tbody>
+<tr>
+<td  data-label="ID Number">{{object.studnumber}}</td>
+<td data-label="Name"> {{object.lastname}}, &nbsp; {{object.firstname}}</td>
+<td data-label="Date"><a>{{object.date}}</a></td>
+<td data-label="Status"><a>{{object.status|title}}</a></td>
+<td  ><a href="{% url 'counselor_view_detail_referred_students' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+
+</tr>
+</tbody>
+
+
+
+{%endfor %}
+</table>
+</div>
 
 {% endblock %}
-
-
-
