--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -6,149 +6,135 @@ Notification_Detail
 
 {% block content %} 
 <style>
-       .card{
-      display: flex;
-      padding: 20px;
-      max-width: 408px;
-   padding-left: 5px;
-      height: 210px;
-      margin: 20px;
-      border-radius: 10px;
-      background-color: #98adb4;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-      overflow-y: scroll;
-      float: left;
-      flex-wrap: row;
-      margin-left: 140px;
-      align-items: stretch;
-     
-      
-      
-      
-    }
-.txtFont{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; margin-right: 30px; 
-  display: flex;
-  font-size: 17px;
-  text-overflow: ellipsis;
-  align-items: start;
-}
-.txtFonty{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; 
-  display: flex;
-  font-size: 17px; margin-left: 10px;
-  text-overflow: ellipsis;
-  margin-top: 8px;
-  align-items: center;
-  /* justify-content: center; */
-}
-/* === TABLE ==== */
-.table-box
-{
-    margin: 50px auto;
-}
-
-.table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-    
-}
-.table-head{
+  #wrapper {
   
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    height: 20px;
-    line-height: 5px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
- 
-}
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #d8c090;
-    vertical-align: middle;
-    
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 10%;
-}
-
-.last-cell{
-    border-right: none;
-    width: 10%;
-}
-/* a{
-    text-decoration: none;
-    color: #555;
-} */
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 20px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
+    display: flex;
+    padding: 20px;
   }
-}
-.trow-list{
-      display: table;
-    width: 85%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: #E3E4FA;
-    padding: 4px 0;
-    color: #d8c090;
-    font-size: 15px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    line-height: 5px;
-    
-}
-.container{
-  border-radius: 10px;
-      background-color: #B4CFEC;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-  width: 800px;
-  min-height: auto;
-  float: center;
-  margin-left: 220px;
   
-}
-.center {
-  margin-left: auto;
-  margin-right: 100px;
-}
-</style>
+  #square {
+    min-width: 300px;
+    height: 350px;
+    border-radius: 20px;
+  
+  
+    margin: auto;
+    overflow-wrap: break-word;
+  }
+  
+  #box {
+    /* border: 1px solid red;
+    background-color: honeydew;
+    border: 1px solid black;
+    box-shadow:
+          0 9px 33px rgba(0, 0, 0, 0.07);
+    height: 350px;
+    min-width: 20px;
+    margin: auto; */
+    border: 1px solid black;
+    border-radius: 10px;
+        background-color: #B4CFEC;
+        box-shadow:
+          0 9px 33px rgba(0, 0, 0, 0.07);
+          min-width: 800px;
+    height: 350px;
+    float: center;
+    margin: auto;
+  }
+  /* === TABLE ==== */
+  
+  /* .table-row{
+      display: table;
+      width: 40%;
+      margin: 10px auto;
+      font-family: sans-serif;
+      background: transparent;
+      padding: 4px 0;
+      color: #555;
+      font-size: 13px;
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      height: 0.1%;
+      border-radius: 20px;
+      margin-top: 50px;
+       
+  } */
+  .table-head{
+    
+      background: #E5E4E2;
+      box-shadow: none;
+      color: #fff;
+      font-weight: 600;
+      line-height: 5px;
+        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+        width: 500px;
+        margin: auto;
+        border-radius: 20px;
+  }
+  .table-head .table-cell{
+      border-right: none;
+  }
+  .table-cell{
+      display: table-cell;
+      width: 20%;
+      text-align: center;
+      padding: 4px 0;
+      border-right: 1px solid #838996;
+      vertical-align: middle;
+  }
+  .first-cell{
+      text-align: left;
+      padding-left: 10px;
+      width: 8%;
+  }
+  .last-cell{
+      border-right: none;
+      width: 15px;
+  }
+  /* a{
+      textdecoration: none;
+      color: #555;
+  } */
+  p{
+    font-size: 17px;
+    color: black;
+  }
+  .listTitle{
+    font-size: 20px;
+    text-align: center;
+  }
+  @media only screen and (max-width: 600px) {
+    .table-row {
+      font-size: 11px;
+      margin: auto;
+    }
+  }
+  .trow-list{
+        display:inline-block;
+      width: 70%;
+     
+      font-family: sans-serif;
+      background: transparent;
+      padding: 10px 0;
+      margin: auto;
+   
+  
+  
+  }
+  .modal1{
+    font-size: 23px;
+    font-weight: 300;
+    text-align: left;
+    margin-left: auto;
+  }
+  .modal2{
+    font-size: 22px;
+    text-align: left;
+    /* line-height: 25px; */
+  }
+  </style>
 
 
-<div class="table-row table-head">
+<div class="table-row table-head" style="margin:auto;">
     <div class="table-cell first-cell">
         <p class="listTitle">Full Details</p>
     </div>
@@ -156,43 +142,44 @@ p{
 <br>
             <div class="container">
 {% for object in object_list %}
-<TABLE class="center">
-    <br>
-<TR>
-<TD><label class="txtFont" style="text-align: center; margin-right: auto; font-size: 120%"><b>Subject:</b></label></TD>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.subject_referred}}</b></label></TD>
+<div id="wrapper">
+  <div id="square">
+    <h2>Must Remember
+    </h2>
+    <img style="max-width: 340px;
+    height: 280px; float: left;" 
+    src="https://userscontent2.emaze.com/images/f9d57cc4-7597-4be3-aa8b-cfc768013058/b0f9ecdf68e03c7cb84638da084701e2.png"  
+   >
+   <br>
+  
+  </div>
+
+  <div id="box">
+
+      <br>        
+      <div class="trow-list">
+        <div  class="table-cell">
+      <p class="modal1">Subject: &nbsp;</p>
+      <p class="modal1">Date: &nbsp; &nbsp;</p>
+      <p class="modal1">Reasons: &nbsp; &nbsp;</p>  
+      <p class="modal1">Start Session: &nbsp; &nbsp;</p>  
+      <p class="modal1">End Session: &nbsp; &nbsp;</p>   
+        </div> 
+
+            <div class="table-cell">
+      <p class="modal2"> &nbsp; &nbsp;  {{object.subject_referred}}</p>
+      <p class="modal2" > &nbsp; &nbsp; {{object.date}}</p>
+      <p class="modal2" > &nbsp; &nbsp; {{object.reasons}}</p>  
+      <p class="modal2" > &nbsp; &nbsp; {{object.start_time}}</p>  
+      <p class="modal2" > &nbsp; &nbsp; {{object.end_time}}</p>    
+      </div> 
+      </div>
 
 
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Reasons:</b></label></TD>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.reasons}}</b></label></TD>
+     </div>
+</div>
 
-
-</TR>
-
-<TR>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Date:</b></label></TD>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.date}}</b></label></TD>
-</TR>
-
-<TR>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Start Session:</b></label></TD>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.start_time}}</b></label></TD>
-</TR>
-
-<TR>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>End Session:</b></label></TD>
-<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.end_time}}</b></label></TD>
-</TR>
-
-
-
-
-</TABLE>
 {% endfor %} 
  </div>
 
 {% endblock %}
-
-    
