--- a/templates/teacher/modal.html
+++ b/templates/teacher/modal.html
@@ -6,187 +6,163 @@
 
 {% block content %} 
 <style>
-   
-          .center {
-            margin-left: auto;
-            margin-right: auto;
-          }
-          .txtFont{
-            font-family: Arial, Helvetica, sans-serif;
-            color: black;
-            text-align:left; margin-right: 100px; font-size: 20px;
-          }
-          .txtFonty{
-            font-family: Arial, Helvetica, sans-serif;
-            color: black;
-            text-align:left; margin-right: 100px; font-size: 17px;
-          }
-          .last{
-             font-size: 25px;
-          }
-   
-
-
-    .card-text{
-        display: inline;
-        flex-direction: row;
-        justify-content: start;
-        width: 600px;
-        /* margin-right: 600px; */
-        
-    }
-
-
-    .card-img{
-        width: 160px;
-        height: 160px;
-        border-radius: 50%;
-        float: left;
-        margin-left: 80px;
-        margin-top: 20px;
-       
-    }
-
-
-    .card-description{
-        margin: 10px 0;
-    }
-
-
-    .card-link{
-        margin-top: 20px;
-    }
-    .card-img{
-        background-color: transparent;
+    #wrapper {
     
-        float: left;
+      display: flex;
+      padding: 20px;
     }
-
-    .card-title{
-        font-size: 20px;
-        color: #334155;
-        margin-right: 800px;
-        margin-left: 160px;
-        margin-bottom: 40px;
-        padding: auto;
-    }
-    .card-stud{
-        font-size: 23px;
-        color: #334155;
-        margin-right: 90px; line-height: 5%;
-        font-weight: 600;
-    } 
-    .card-description{
-        font-size: 12px;
-        color: #64748B;
-    }
-
-    .card-link{
-        font-size: 12px;
-        color: #4F46E5;
-    }
-/* === TABLE ==== */
-.table-box
-{
     
-    margin-bottom: 40px;
-    margin-left: 150px;
-    vertical-align:top;
-}
-
-/* .table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-    margin-top: 50px;
-     
-} */
-.table-head{
-  
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    height: 20px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-}
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #838996;
-    vertical-align: middle;
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 8%;
-}
-.last-cell{
-    border-right: none;
-    width: 15px;
-}
-/* a{
-    textdecoration: none;
-    color: #555;
-} */
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 20px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
-  }
-}
-.trow-list{
-      display:inline-block;
-    width: 85%;
-   
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
+    #square {
+      min-width: 300px;
+      height: 350px;
+      border-radius: 20px;
     
-    height: 15px;
+      border: 1px solid black;
+      border-radius: 10px;
+          background-color: #B4CFEC;
+          box-shadow:
+            0 9px 33px rgba(0, 0, 0, 0.07);
+      margin: auto;
+      overflow-wrap: break-word;
+    }
     
-   
-     vertical-align:top;
-     margin-bottom: 100px;
-
-}
-.modal{
-  font-size: 19px;
-}
-.container{
-  border-radius: 10px;
-      background-color: #B4CFEC;
+    #box {
+      /* border: 1px solid red;
+      background-color: honeydew;
+      border: 1px solid black;
       box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-  width: 1200px;
-  height: 400px;
-  float: center;
-  margin-left: 20px;
-}
+            0 9px 33px rgba(0, 0, 0, 0.07);
+      height: 350px;
+      min-width: 20px;
+      margin: auto; */
+      border: 1px solid black;
+      border-radius: 10px;
+          background-color: #B4CFEC;
+          box-shadow:
+            0 9px 33px rgba(0, 0, 0, 0.07);
+            min-width: 800px;
+      height: 350px;
+      float: center;
+      margin: auto;
+    }
+    /* === TABLE ==== */
     
-</style>
+    /* .table-row{
+        display: table;
+        width: 40%;
+        margin: 10px auto;
+        font-family: sans-serif;
+        background: transparent;
+        padding: 4px 0;
+        color: #555;
+        font-size: 13px;
+        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+        height: 0.1%;
+        border-radius: 20px;
+        margin-top: 50px;
+         
+    } */
+    .table-head{
+      
+        background: #E5E4E2;
+        box-shadow: none;
+        color: #fff;
+        font-weight: 600;
+        line-height: 5px;
+          box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+          width: 500px;
+          margin: auto;
+          border-radius: 20px;
+    }
+    .table-head .table-cell{
+        border-right: none;
+    }
+    .table-cell{
+        display: table-cell;
+        width: 20%;
+        text-align: center;
+        padding: 4px 0;
+        border-right: 1px solid #838996;
+        vertical-align: middle;
+    }
+    .first-cell{
+        text-align: left;
+        padding-left: 10px;
+        width: 8%;
+    }
+    .last-cell{
+        border-right: none;
+        width: 15px;
+    }
+    /* a{
+        textdecoration: none;
+        color: #555;
+    } */
+    p{
+      font-size: 17px;
+      color: black;
+    }
+    .listTitle{
+      font-size: 20px;
+      text-align: center;
+    }
+    @media only screen and (max-width: 600px) {
+      .table-row {
+        font-size: 11px;
+        margin: auto;
+      }
+    }
+    .trow-list{
+          display:inline-block;
+        width: 70%;
+       
+        font-family: sans-serif;
+        background: transparent;
+        padding: 10px 0;
+        margin: auto;
+     
+    
+    
+    }
+    .modal1{
+      font-size: 22px;
+      font-weight: 300;
+      text-align: left;
+      margin-left: auto;
+    }
+    .modal2{
+      font-size: 21px;
+      text-align: left;
+    }
+    div.item {
+    
+        vertical-align: auto;
+        display: inline-block;
+    
+        text-align: center;
+    
+        width: 120px;
+    }
+    
+    .caption {
+    
+        display: block;
+    }
+    .item{
+      width:200px;
+      text-align:center;
+      display:block;
+      background-color: transparent;
+      border: 1px solid transparent;
+      margin-right: 10px;
+      margin-bottom: 1px;
+      float:left;
+    }
+    
+    #index-gallery{
+      width:465px;
+    }
+    </style>
  {% if not object_list %}
                       No Referred Students yet!
                   {% endif %}
@@ -199,41 +175,44 @@ p{
             </div>
         </div>  
         <br>
-                <div class="container">  
-                  <br> <br> 
-              <img class="card-img" src='https://static.thenounproject.com/png/1743560-200.png'/>
-           <div class="table-box">
-                      
-        <div class="trow-list">
-        
-            <div  class="table-cell ">
-                 <p class="modal" style="text-align: left;">{{object.studnumber}} &nbsp;</p>
- <p class="modal" style="text-align: left;">Degree Program: &nbsp; &nbsp;</p>
-  <p class="modal" style="text-align: left;">Behavior Problem: &nbsp; &nbsp;</p>
-   <p class="modal" style="text-align: left;">Subject: &nbsp; &nbsp;</p>
-   <p class="modal"style="text-align:left;">Reasons: &nbsp; &nbsp;</p>
-            </div> 
-                <div class="table-cell last-cell">
-                <div class="table-cell">
- <p class="modal"style="text-align: left;"> &nbsp; &nbsp; {{object.lastname}}, &nbsp; {{object.firstname}}</p>
- <p class="modal"style="text-align: left;"> &nbsp; &nbsp; {{object.degree_program}}</p>
- <p class="modal"style="text-align: left;"> &nbsp; &nbsp; {{object.behavior_problem}}</p>
- <p class="modal" style="text-align: left;"> &nbsp; &nbsp; {{object.subject_referred}}</p>
-
- <p class="modal" style="text-align: left;"> &nbsp; &nbsp; {{object.reasons}}</p>
-</div> 
-            </div>    
-        </div>
-        
-
-               
-         </div>
-         </div>
- 
+        <div id="wrapper">
+            <div id="square">
+              <br>
+            
+                
+                  <img style="max-width: 200px;
+                  height: 200px; margin: auto;" 
+                  src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
+                 >
+                 <p style="padding: 10px; font-size: 17px;"><b>Students Name:</b> {{object.lastname}}, {{object.firstname}}</p>
+                 <p style="line-height: 1px; font-size: 17px;"><b>Degree Program:</b>  {{object.degree_program}}</p>
+             
+          
+            </div>
+          
+            <div id="box">
+          
+              <br>        
+              <div class="trow-list">
+                <div  class="table-cell">
+              <p class="modal1"><b>Student Number:</b> &nbsp;</p>
+              <p class="modal1"><b>Subject:</b> &nbsp; &nbsp;</p>
+              <p class="modal1"><b>Behavior Problem:</b> &nbsp; &nbsp;</p>   
+              <p class="modal1"><b>Reasons: </b>&nbsp; &nbsp;</p>  
+                </div> 
+          
+                    <div class="table-cell">
+              <p class="modal2"> &nbsp; &nbsp; {{object.studnumber}}</p>
+              <p class="modal2" > &nbsp; &nbsp; {{object.subject_referred}}</p>
+              <p class="modal2" > &nbsp; &nbsp; {{object.behavior_problem}}</p>   
+              <p class="modal2" > &nbsp; &nbsp;  {{object.reasons}}</p>   
+              </div> 
+              </div>
+          
+          
+             </div>
+          </div>
 
                  {% endfor %} 
                
 {% endblock %}
-
-
-       
