--- a/templates/counselor/feedback.html
+++ b/templates/counselor/feedback.html
@@ -4,132 +4,9 @@
 
 {% block content %} 
 <style>
-  #wrapper {
-  
-    display: flex;
-    padding: 20px;
-  }
-  
-  #square {
-    min-width: 300px;
-    height: 350px;
-    border-radius: 20px;
-  
-  
-    margin: auto;
-    overflow-wrap: break-word;
-  }
-  
-  #box {
-    /* border: 1px solid red;
-    background-color: honeydew;
-    border: 1px solid black;
-    box-shadow:
-          0 9px 33px rgba(0, 0, 0, 0.07);
-    height: 350px;
-    min-width: 20px;
-    margin: auto; */
-    border: 1px solid black;
-    border-radius: 10px;
-        background-color: #B4CFEC;
-        box-shadow:
-          0 9px 33px rgba(0, 0, 0, 0.07);
-          min-width: 800px;
-    height: 350px;
-    float: center;
-    margin: auto;
-  }
-  /* === TABLE ==== */
-  
-  /* .table-row{
-      display: table;
-      width: 40%;
-      margin: 10px auto;
-      font-family: sans-serif;
-      background: transparent;
-      padding: 4px 0;
-      color: #555;
-      font-size: 13px;
-      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-      height: 0.1%;
-      border-radius: 20px;
-      margin-top: 50px;
-       
-  } */
-  .table-head{
-    
-      background: #E5E4E2;
-      box-shadow: none;
-      color: #fff;
-      font-weight: 600;
-      line-height: 5px;
-        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-        width: 500px;
-        margin: auto;
-        border-radius: 20px;
-  }
-  .table-head .table-cell{
-      border-right: none;
-  }
-  .table-cell{
-      display: table-cell;
-      width: 20%;
-      text-align: center;
-      padding: 4px 0;
-      border-right: 1px solid #838996;
-      vertical-align: middle;
-  }
-  .first-cell{
-      text-align: left;
-      padding-left: 10px;
-      width: 8%;
-  }
-  .last-cell{
-      border-right: none;
-      width: 15px;
-  }
-  /* a{
-      textdecoration: none;
-      color: #555;
-  } */
-  p{
-    font-size: 17px;
-    color: black;
-  }
-  .listTitle{
-    font-size: 20px;
-    text-align: center;
-  }
-  @media only screen and (max-width: 600px) {
-    .table-row {
-      font-size: 11px;
-      margin: auto;
-    }
-  }
-  .trow-list{
-        display:inline-block;
-      width: 70%;
-     
-      font-family: sans-serif;
-      background: transparent;
-      padding: 10px 0;
-      margin: auto;
-   
-  
-  
-  }
-  .modal1{
-    font-size: 23px;
-    font-weight: 300;
-    text-align: left;
-    margin-left: auto;
-  }
-  .modal2{
-    font-size: 22px;
-    text-align: left;
-  }
+
   .login_btn {
-		width: 20%;
+		width: 100%;
 		background: #d8c090!important;
 		color: white !important;
 	}
@@ -144,10 +21,12 @@
 	}
 
   button {
+    width: 50%;
+    margin-left: 450px;
     background-color: #d8c090;
     border-radius: 20px;
     border: 1px solid #98b4ac;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     padding: 12px 45px;
     letter-spacing: 1px;
@@ -155,6 +34,65 @@
     transition: transform 80ms ease-in;
 }
 
+form.cleanForm {
+width:700px;
+margin:0 auto;
+
+}
+form.cleanForm p {
+margin-bottom:15px;
+}
+
+.column{
+ width:250px;
+ float:left;
+ margin-right:20px;
+ padding: 10px;   
+}
+.row{
+ width: 450px;
+ float:right;
+
+ text-align: left;
+ 
+
+}
+.row1{
+ width: 450px;
+ float:left;
+ margin-left: 250px;
+ text-align: left;
+
+}
+.row2{
+ width: 550px;
+ float:left;
+ margin-left: 400px;
+}
+
+.last{
+ margin:0;
+ padding: 10px;   
+}
+.pText{
+  font-weight: 600;
+}
+.bText{
+  color: #000;
+}
+.form-field{
+  height: 900px;
+  width: 600px;
+}
+#id_feedback{
+  width: 1100px;
+    height: 200px;
+    overflow-y: scroll;
+}
+#id_remarks{
+  width: 1100px;
+    height: 200px;
+}
   </style>
   
 <!-- 
@@ -166,46 +104,56 @@
 <br>
 <br>   
 
-  Date Referred: {{info.created_at}} <br> 
+  <!-- Date Referred: {{info.created_at}} <br> 
   Reffered by : {{info1.firstname}} {{info1.lastname}} <br> 
-  Name of student referred : {{student.firstname}}  {{student.lastname}} <br> 
-  Subject of student referred : {{student.subject_referred}} <br> 
+  Name of student Referred : {{student.firstname}}  {{student.lastname}} <br> 
+  Subject of student Referred : {{student.subject_referred}} <br> 
 
-  Prepared by : {{info2.firstname}} {{info2.lastname}} <br> 
+  Prepared by : {{info2.firstname}} {{info2.lastname}} <br>  -->
 
-<div id="wrapper">
-  <div id="square">
-    <br>
-    <h2>Input your Feedback
-    </h2>
-    <img style="max-width: 600px;
-    height: 250px; float: center;" 
-    src="https://www.pngitem.com/pimgs/m/377-3772484_curved-right-arrow-curved-arrow-to-the-right.png"  
-   >
-   <br>
+  <form action="#" class="cleanForm" method="POST">
+
+
   
-  </div>
+    {% for message in messages %}
+    <center> <p style=" margin-left: auto;"><b>{{message}} !</b></p> </center>
+{% endfor %}
+        <div class="column">
+          <div class="row">     
+            <p class="pText"><b class="bText">Date Referred: &nbsp;</b> {{info.created_at}}</p> 
+            <p class="pText"><b class="bText" >Name of Student Referred: &nbsp;</b> {{student.lastname}}, {{student.firstname}}</p> 
+            
+          &nbsp;    &nbsp;
+            <form  method="POST" action="" class="form-field" > 
+    
+              {% csrf_token %}
+             <i><h4  class="bText" >Actions Taken/Strategies taken by the Counselor:</h4> </i>
+             {{object.feedback}}
+             <i><h4  class="bText" >Input Remarks here:</h4> </i>
+             {{object.remarks}}
+             <p class="pText"><b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}</p>
+            <br> 
+            <button class="btn success" style="font-weight: bold;">Submit</button>
+            </form>
 
-  <div id="box">
+<br>
+          
 
-    <div class="container">
-      <form  method="POST" action="">
-        <br> <br>
-        {% csrf_token %}
-         feedback {{object.feedback}}
-       remarks {{object.remarks}}
-      
-      <br> <br>
-      <button class="btn success" style="font-weight: bold;">Submit</button>
-      </form>
-       {% for message in messages %}
-                          <center> <p><b>{{message}} !</b></p> </center>
-                      {% endfor %}
-                    </div>
+          </div>
+          </div>
 
 
-     </div>
-</div>
+        <div class="column">
+          <div class="row1"> 
+            <p class="pText"><b class="bText">Reffered by: &nbsp;</b> {{info1.firstname}} {{info1.lastname}}</p>
+            <p class="pText"><b class="bText">Subject of Student Referred: &nbsp;</b>{{student.subject_referred}}</p>
+        
+            &nbsp;    &nbsp;   
+          </div>
+         
+          </div>
+        
+    </form>
 
-
+   
 {% endblock %}
