--- a/templates/teacher/list_students.html
+++ b/templates/teacher/list_students.html
@@ -206,7 +206,7 @@ p{
                        <div class="table-box">
                             {% for object in object_list %}
            
-            <a href="{% url 'new' object.studnumber%}"> 
+            <a href="{% url 'new' object.studnumber id %}"> 
 
  
         <div class="trow-list">
