--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -474,6 +474,12 @@ img {
                                 <span class="nav__name">Upload Students load</span>
                             </a>
 
+                             <a href="{% url 'admin_offering' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Offerings</span>
+                            </a>
+
+
                            
                              
                         </div>
