--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -4,22 +4,139 @@
 Schedule
 {% endblock %} 
 
+
 {% block content %} 
+<style>
 
-<form method="POST" action="">
-    {% csrf_token %}
-    {{schedform.studnumber}}
-    {{schedform.firstname}}
-    {{schedform.lastname}}
-    {{schedform.reasons}}
-  
-<br>
-  <button class="btn success" style="font-weight: bold;">Submit</button>
-</form>
+  .login_btn {
+		width: 100%;
+		background: #d8c090!important;
+		color: white !important;
+	}
 
-{% for message in messages %}
-                    <center> <p>{{message}}</p> </center>
-                {% endfor %}
-    
+	.login_btn:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
+	}
 
+	.login_container {
+		padding: 0 2rem;
+	}
+
+  button {
+    width: 50%;
+    margin-left: 450px;
+    background-color: #d8c090;
+    border-radius: 20px;
+    border: 1px solid #98b4ac;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+
+form.cleanForm {
+min-width: auto;
+margin-left: 20px;
+float: center;
+
+
+}
+form.cleanForm p {
+margin-bottom:15px;
+}
+
+.column{
+ width:250px;
+ float:left;
+ margin-right:20px;
+ padding: 10px;   
+}
+.row{
+ min-width: none;
+ float:left;
+
+ text-align: left;
+ 
+
+}
+.row1{
+ width: 450px;
+ float:left;
+ margin-left: 250px;
+ text-align: left;
+
+}
+.row2{
+ width: 550px;
+ float:left;
+ margin-left: 400px;
+}
+
+.last{
+ margin:0;
+ padding: 10px;   
+}
+.pText{
+  font-weight: 600;
+  justify-content: center;
+}
+.bText{
+  color: #000;
+}
+.form-field{
+  height: 900px;
+  width: 600px;
+}
+#id_reasons{
+  width: 1010px;
+    height: 200px;
+    overflow-y: scroll;
+}
+#id_studnumber{
+  width: 100px;
+    height: 30px;
+    color: #000;
+}
+#id_lastname{
+  width: 100px;
+    height: 30px;
+    color: #000;
+}
+#id_firstname{
+  width: 100px;
+    height: 30px;
+    color: #000;
+}
+  </style>
+
+<form action="#" class="cleanForm" method="POST">
+  {% for message in messages %}
+  <center> <p style=" margin-left: auto;"><b>{{message}} !</b></p> </center>
+{% endfor %}
+     
+        <div class="row">     
+          <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
+          <p class="pText"><b class="bText" >Student's Last Name: &nbsp;</b> {{schedform.lastname}}</p> 
+          <p class="pText"><b class="bText" >Student's First Name: &nbsp;</b> {{schedform.firstname}}</p> 
+
+         
+      <form method="POST" action=""> 
+            {% csrf_token %}
+           <i><h4  class="bText" >Input Reasons below:</h4> </i>
+           {{schedform.reasons}}
+           <br> <br>
+          <button class="btn success" style="font-weight: bold;">Submit</button>
+          </form>
+
+        </div>
+     
+
+      
+  </form>
+
+   
 {% endblock %}
+  
