--- a/templates/uploaddb/uploaddb_home.html
+++ b/templates/uploaddb/uploaddb_home.html
@@ -425,7 +425,7 @@ img {
         <header class="header">
             <div class="header__container">
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold; margin-right: 1030px;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right: auto;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
     
                 <div class="header__toggle">
                     <i class='bx bx-menu' id="header-toggle"></i>
