--- a/templates/teacher/new.html
+++ b/templates/teacher/new.html
@@ -2,73 +2,208 @@
 {% block title %} Refer Student {% endblock %}
 {% block content %}
 <style>
-.refCard {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 102%;
-  height: 800px;
-  border-radius: 5px;
-  background-color: var(--card-color); 
-  float: center;
-  margin-top: 10px;
-  margin-bottom: 35px;
-  margin-right: 500px;
-  /* margin-left: 80px;  */
-  text-align: center;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-.form-control {
-   margin-left: 50px; 
-    display: block;
-    width: 80%;
-    /* height: calc(1.2em + 1.2rem + 1px); */
-    height: 45x;
-    /* padding: 0.65rem 1rem; */
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #3F4254;
-    background-color: #ffffff;
-    background-clip: padding-box;
-    border: 1px solid #E4E6EF;
-    border-radius: 0.42rem;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-    transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-}
-.form-control-lg {
-    /* height: calc(1.5em + 1.65rem + 2px); */
-    height: 45px;
-    /* padding: 0.825rem 1.42rem; */
-    font-size: 1.08rem;
-    line-height: 1.5;
-    border-radius: 0.42rem;
+  .refCard {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 102%;
+    height: 800px;
+    border-radius: 5px;
+    background-color: var(--card-color); 
+    float: center;
+    margin-top: 10px;
+    margin-bottom: 35px;
+    margin-right: 500px;
+    /* margin-left: 80px;  */
+    text-align: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  .form-control {
+     margin-left: 50px; 
+      display: block;
+      width: 80%;
+      /* height: calc(1.2em + 1.2rem + 1px); */
+      height: 45x;
+      /* padding: 0.65rem 1rem; */
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #3F4254;
+      background-color: #ffffff;
+      background-clip: padding-box;
+      border: 1px solid #E4E6EF;
+      border-radius: 0.42rem;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+      transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  }
+  .form-control-lg {
+      /* height: calc(1.5em + 1.65rem + 2px); */
+      height: 45px;
+      /* padding: 0.825rem 1.42rem; */
+      font-size: 1.08rem;
+      line-height: 1.5;
+      border-radius: 0.42rem;
+      outline-color:#d8c090;
+      border: 2px solid #C9C0BB;
+  }
+  .txtColor{
+  color: #3B3131;
+  font-family: "Times New Roman", Times, serif;
+  }
+  .txtFont{
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 3px;
+    color: black;
+    font-size: 120%
+    
+  }
+  
+  input:not([type="button"]):not([type="submit"]):not([type="reset"]):hover, input:not([type="button"]):not([type="submit"]):not([type="reset"]):focus, textarea:hover, textarea:focus, select:hover, select:focus {
+      border-color: #d8c090;
+      box-shadow: none;
+  }
+  .inputColor{
     outline-color:#d8c090;
-    border: 2px solid #C9C0BB;
-}
-.txtColor{
-color: #3B3131;
-font-family: "Times New Roman", Times, serif;
-}
-.txtFont{
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 3px;
-  color: #3A3B3C;
+  }
+  .login_btn {
+      width: 20%;
+      background: #d8c090!important;
+      color: white !important;
+    }
+  
+    .login_btn:focus {
+      box-shadow: none !important;
+      outline: 0px !important;
+    }
+  
+    .login_container {
+      padding: 0 2rem;
+    }
+  
+    button {
+      background-color: #d8c090;
+      border-radius: 20px;
+      border: 1px solid #98b4ac;
+      font-size: 12px;
+      font-weight: bold;
+      padding: 12px 45px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      transition: transform 80ms ease-in;
+  }
+  
+  .center {
+    margin-right: auto;
+
+  }
+  .reffer{
+    color: #565051;
+  }
+  /* === TABLE ==== */
+  .table-box
+  {
+      margin: 50px auto;
+  }
+  
+  .table-row{
+      display: table;
+      width: 40%;
+      margin: 10px auto;
+      font-family: sans-serif;
+      background: transparent;
+      padding: 4px 0;
+      color: #555;
+      font-size: 13px;
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      height: 0.1%;
+      border-radius: 20px;
+  }
+  .table-head{
+    
+      background: #E5E4E2;
+      box-shadow: none;
+      color: #fff;
+      font-weight: 600;
+      line-height: 3px;
+      width: 400px;
+     
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      
+  
+  }
+  .table-head .table-cell{
+      border-right: none;
+  }
+  .table-cell{
+      display: table-cell;
+      width: 20%;
+      text-align: center;
+      padding: 4px 0;
+      border-right: 1px solid #d6d4d4;
+      vertical-align: middle;
+  }
+  .first-cell{
+      text-align: left;
+      padding-left: 10px;
+      width: 8%;
+  }
+  .last-cell{
+      border-right: none;
+  }
+  /* a{
+      text-decoration: none;
+      color: #555;
+  } */
+  p{
+    font-size: 17px;
+    color: black;
+  }
+  .listTitle{
+    font-size: 23px;
+    text-align: center;
+  }
+  @media only screen and (max-width: 600px) {
+    .table-row {
+      font-size: 11px;
+    }
+  }
+  .trow-list{
+        display: table;
+      width: 85%;
+      margin: 10px auto;
+      font-family: sans-serif;
+      background: #E3E4FA;
+      padding: 4px 0;
+      color: #555;
+      font-size: 13px;
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      line-height: 3px; 
+  }
+  .container{
+    border-radius: 10px;
+        background-color: #B4CFEC;
+        box-shadow:
+          0 9px 33px rgba(0, 0, 0, 0.07);
+    width: 800px;
+    height: 375px;
+    float: center;
+    margin-left: 220px;
+    
+  }
+  #id_reasons{
+  margin-left: 100px;
+
+    height: 200px;
+    overflow-y: scroll;
 }
 
-input:not([type="button"]):not([type="submit"]):not([type="reset"]):hover, input:not([type="button"]):not([type="submit"]):not([type="reset"]):focus, textarea:hover, textarea:focus, select:hover, select:focus {
-    border-color: #d8c090;
-    box-shadow: none;
-}
-.inputColor{
-  outline-color:#d8c090;
-}
+
 .login_btn {
-		width: 20%;
+		width: 100%;
 		background: #d8c090!important;
 		color: white !important;
 	}
@@ -83,10 +218,12 @@ input:not([type="button"]):not([type="submit"]):not([type="reset"]):hover, input
 	}
 
   button {
+    width: 50%;
+    margin-left: 450px;
     background-color: #d8c090;
     border-radius: 20px;
     border: 1px solid #98b4ac;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     padding: 12px 45px;
     letter-spacing: 1px;
@@ -94,108 +231,25 @@ input:not([type="button"]):not([type="submit"]):not([type="reset"]):hover, input
     transition: transform 80ms ease-in;
 }
 
-.center {
-  margin-left: auto;
-  margin-right: auto;
+#id_reasons{
+  min-width: 1000px;
+    height: 200px;
+    overflow-y: scroll;
 }
-.reffer{
-  color: #565051;
+.left {
+float: left;
+margin-right: px;
 }
-/* === TABLE ==== */
-.table-box
-{
-    margin: 50px auto;
-}
-
-.table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-}
-.table-head{
-  
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    line-height: 5px;
-    width: 400px;
-   
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    
+.right {
+float: right;
 
 }
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #d6d4d4;
-    vertical-align: middle;
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 8%;
-}
-.last-cell{
-    border-right: none;
-}
-/* a{
-    text-decoration: none;
-    color: #555;
-} */
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 23px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
-  }
-}
-.trow-list{
-      display: table;
-    width: 85%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: #E3E4FA;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    line-height: 5px; 
-}
-.container{
-  border-radius: 10px;
-      background-color: #B4CFEC;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-  width: 800px;
-  height: 375px;
-  float: center;
-  margin-left: 220px;
-  
-}
 
-</style>
+  </style>
 
-<form class="reffer" method="POST" action="">
+
+  <!-- SEARCH BAR NI -->
+  <form class="reffer" method="POST" action="">
     {% csrf_token %}
     <!-- SEARCH BAR NI -->
 
@@ -206,54 +260,55 @@ p{
             </div>
         </div>
        <h3 style="font-weight: bold; text-align: center;" class="txtColor">&nbsp; &nbsp;  <i>To proceed with Referring a student, kindly input the following details.</i></h3>
-<br>
-<br>
-
- <div class="container">
-          <TABLE class="center">
-            <br>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>Input Student ID:</b></label></TD>
-<TD>{{form1.studnumber}}</TD>
-
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>First Name:</b></label></TD>
-<TD>{{form1.firstname}}</TD>
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>Last Name:</b></label></TD>
-<TD>{{form1.lastname}}</TD>
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>Subject Reffered:</b></label></TD>
-<TD>{{form1.subject_referred}}</TD>
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>Behavioral Problem:</b></label></TD>
-<TD>{{form1.behavior_problem}}</TD>
-</TR>
-<TR>
-<TD><label class="txtFont" style="text-align:left; margin-right: 100px; font-size: 120%"><b>Reasons&nbsp;for&nbsp;Referral:</b></label></TD>
-<TD>{{form1.reasons}}</TD>
-
-</TR>
-
-</TABLE>
-<br>
-  <button class="btn success" style="font-weight: bold;">Submit</button>
-</form>
 &nbsp;
-          {% for message in messages %}
-                    <center> <p>{{message}}</p> </center>
-                {% endfor %}
+{% for message in messages %}
+          <center> <p>{{message}}</p> </center>
+      {% endfor %}
+          <TABLE class="center" style="margin-left: 100px;">
+<TR>
+<TD><label class="txtFont"><b>Input Student ID:</b></label></TD>
+<TD><label style="margin-right: auto;">{{form1.studnumber}}</label></TD>
+</TR>
+<TR>
+<TD><label class="txtFont"><b>First Name:</b></label></TD>
+<TD><label style="margin-right: auto;">{{form1.firstname}}</label></TD>
+</TR>
+<TR>
+<TD><label class="txtFont"><b>Last Name:</b></label></TD>
+<TD><label style="margin-right: auto;">{{form1.lastname}}</label></TD>
+</TR>
+<TR>
+<TD><label class="txtFont"><b>Subject Reffered:</b></label></TD>
+<TD><label style="margin-right: auto;">{{form1.subject_referred}}</label></TD>
+
+</TR>
+<TR>
+<TD><label class="txtFont"><b>Behavioral Problem:</b></label></TD>
+<TD><label style="margin-right: auto;">{{form1.behavior_problem}}</label></TD>
+</TR>
+</TABLE>
+
+<div class="column">
+  <div class="row">     
     
+  &nbsp;    &nbsp;
+  
+     <i><h4 style="margin-left: 95px; font-size: large;" >Reasons&nbsp;for&nbsp;Referral:</h4> </i>
+     {{form1.reasons}}
+     &nbsp;
+    <button class="btn success" style="font-weight: bold;">Submit</button>
+   
+  </div>
+  </div>
+  <br>
+  <!-- <button class="btn success" style="font-weight: bold;">Submit</button> -->
+</form>
+
+
  <br> 
  </div>
+
 
  
       
 {% endblock %}
-
-
-
